--- a/.github/workflows/release-binaries.yaml
+++ b/.github/workflows/release-binaries.yaml
@@ -76,7 +76,7 @@ jobs:
     - name: 'Build Jextract'
       shell: sh
       run: |
-        sh ./gradlew -Pjdk19_home=${{ matrix.JAVA19_HOME }} -Pllvm_home=/tmp/deps/clang_llvm clean install
+        sh ./gradlew -Pjdk19_home=${{ matrix.JAVA19_HOME }} -Pllvm_home=/tmp/deps/clang_llvm clean assemble
 
     - name: Upload binary
       uses: actions/upload-artifact@v3
@@ -100,7 +100,7 @@ jobs:
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
-          # TODO: automate this better
+          # TODO: automate this better an input from workflow-dispatch?
           tag_name: 0.0.1-SNAPSHOT
           # tag_name: ${{ github.event.inputs.release-version}}
           files: |
