--- a/.github/workflows/release-binaries.yaml
+++ b/.github/workflows/release-binaries.yaml
@@ -1,8 +1,11 @@
 name: Release Jextract to GH releases
 
 on:
-  push:
   workflow_dispatch:
+    inputs:
+      release-version:
+        description: 'Version being released'
+        required: true
 
 env:
   CLANG_LLVM_BASE_URL: "https://github.com/llvm/llvm-project/releases/download/llvmorg-13.0.0/clang+llvm-13.0.0-x86_64"
@@ -101,9 +104,7 @@ jobs:
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
-          # TODO: automate this better an input from workflow-dispatch?
-          tag_name: 0.0.2-SNAPSHOT
-          # tag_name: ${{ github.event.inputs.release-version}}
+          tag_name: ${{ github.event.inputs.release-version }}
           files: |
             jextract-macos.zip
             jextract-linux.zip
