--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -58,6 +58,17 @@ jobs:
       run: |
         ${{ matrix.JAVA19_HOME }}/bin/java --version
 
+    - name: 'Setup Java 18'
+      uses: oracle-actions/setup-java@v1.1.1
+      with:
+        release: 18
+
+    - name: 'Check default Java version'
+      shell: sh
+      run: |
+        java --version
+        echo JAVA_HOME=$JAVA_HOME
+
     - name: 'Setup LLVM'
       shell: sh
       run: |
