--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,7 +17,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [macos-latest, ubuntu-20.04]
+        os: [ubuntu-20.04]
         include:
           - os: ubuntu-20.04
             TARGET: linux-gnu-ubuntu-20.04
