--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,9 +22,9 @@ jobs:
           - os: ubuntu-20.04
             TARGET: linux-gnu-ubuntu-20.04
             JAVA19_HOME: /tmp/deps/jdk-19
-          - os: macos-latest
-            TARGET: apple-darwin
-            JAVA19_HOME: /tmp/deps/jdk-19/jdk-19.jdk/Contents/Home
+          # - os: macos-latest
+            # TARGET: apple-darwin
+            # JAVA19_HOME: /tmp/deps/jdk-19/jdk-19.jdk/Contents/Home
 
     steps:
     - name: 'Check out repository'
